<resources>
    <string name="app_name">Mobile Client</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="login_fragment_label">Login</string>
    <string name="image_picker_fragment_label">Choose Image</string>
    <string name="product_details_fragment_label">Product Details</string>
    <string name="stores_fragment_label">Stores</string>
    <string name="history_fragment_label">History</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">0</string>
    <string name="random_heading">Here is a random number between 0 and %d.</string>
    <string name="toast_button_text">Toast</string>
    <string name="random_button_text">Random</string>
    <string name="count_button_text">Count</string>
    <string name="toast_text">Hello Toast!</string>
    <string name="textview_random_text">R</string>

    <string name="textview_upload_text">Capture image or pick existing from the gallery.</string>
    <string name="upload_button_text">Upload</string>
    <string name="pick_button_text">Choose</string>
    <string name="capture_button_text">Capture</string>
    <string name="picked_imageview_description">Picked Image</string>
    <string name="upload_warning_textview_text">Can`t find any code on this image.</string>
    <string name="success_decode_toast_text">Decoded successfully</string>
    <string name="login_textview_text">Enter your email</string>
    <string name="input_hint_email">Email</string>
    <string name="login_button">Login</string>
    <string name="details_textview_text">Decoded details</string>
    <string name="product_image">Product image</string>
    <string name="stores_button_text">Stores</string>
    <string name="reviews_button_text">Reviews</string>
    <string name="history_textview">%s`s history</string>
    <string name="stores_count_textview">Available stores: %d</string>
    <string name="history_button_text">History</string>
    <string name="unicode_checkmark">✔</string>
    <string name="unicode_warning">⚠</string>
</resources>