<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/imagePickerFragment"
        android:name="com.example.mobileclient.ImagePickerFragment"
        android:label="@string/image_picker_fragment_label"
        tools:layout="@layout/fragment_image_picker" >
        <argument
            android:name="username"
            app:argType="string" />
        <action
            android:id="@+id/action_imagePickerFragment_to_detailsFragment"
            app:destination="@id/detailsFragment" />
        <action
            android:id="@+id/action_imagePickerFragment_to_historyFragment"
            app:destination="@id/historyFragment" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.mobileclient.LoginFragment"
        android:label="@string/login_fragment_label"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_imagePickerFragment"
            app:destination="@id/imagePickerFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailsFragment"
        android:name="com.example.mobileclient.DetailsFragment"
        android:label="@string/product_details_fragment_label"
        tools:layout="@layout/fragment_details" >
        <argument
            android:name="codeData"
            app:argType="string" />
        <argument
            android:name="username"
            app:argType="string" />
        <action
            android:id="@+id/action_detailsFragment_to_storesFragment"
            app:destination="@id/storesFragment" />
    </fragment>
    <fragment
        android:id="@+id/storesFragment"
        android:name="com.example.mobileclient.StoresFragment"
        android:label="@string/stores_fragment_label"
        tools:layout="@layout/fragment_stores" >
        <argument android:name="stores"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/historyFragment"
        android:name="com.example.mobileclient.HistoryFragment"
        android:label="@string/history_fragment_label"
        tools:layout="@layout/fragment_history" >
        <argument
            android:name="username"
            app:argType="string" />
    </fragment>

</navigation>